--- a/constance/locale/ru/LC_MESSAGES/django.po
+++ b/constance/locale/ru/LC_MESSAGES/django.po
@@ -3,27 +3,29 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-13 13:49+0200\n"
-"PO-Revision-Date: 2012-02-17 16:34+0100\n"
-"Last-Translator: Florian Apolloner <apollo13@apolloner.eu>\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: admin.py:114
 msgid "Live settings updated successfully."
-msgstr "Die Livekonfiguration wurde erfolgreich aktualisiert."
+msgstr "Настройки изменены"
 
 #: admin.py:118
 msgid "Constance config"
-msgstr "Constance Konfiguration"
+msgstr "конфиг Constance"
 
 #: admin.py:158 backends/database/models.py:18
 msgid "constance"
@@ -31,7 +33,7 @@ msgstr ""
 
 #: admin.py:159 admin.py:160
 msgid "config"
-msgstr ""
+msgstr "конфиг"
 
 #: backends/database/models.py:19
 msgid "constances"
@@ -39,24 +41,24 @@ msgstr ""
 
 #: templates/admin/constance/change_list.html:36
 msgid "Name"
-msgstr "Name"
+msgstr "Имя"
 
 #: templates/admin/constance/change_list.html:37
 msgid "Default"
-msgstr "Voreinstellung"
+msgstr "По умолчанию"
 
 #: templates/admin/constance/change_list.html:38
 msgid "Value"
-msgstr "Wert"
+msgstr "Значение"
 
 #: templates/admin/constance/change_list.html:39
 msgid "Is modified"
-msgstr "Ist modifiziert"
+msgstr "Изменен"
 
 #: templates/admin/constance/change_list.html:61
 msgid "Save"
-msgstr "Speichern"
+msgstr "Сохранить"
 
 #: templates/admin/constance/change_list.html:71
 msgid "Home"
-msgstr "Start"
+msgstr "Домой"
